crates/strider-analyze/tests/snapshots/x86__control__select_three.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "13" -> "9" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="arg[2] ← ram[sp + 12]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v6" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "12" -> "15" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "13" -> "15" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "14" -> "15" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "16" [label="arg[1] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "17" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="arg[3] ← ram[sp + 16]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "12" -> "21" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "13" -> "21" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "14" -> "21" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "22" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
