crates/strider-analyze/tests/snapshots/x86__control__sum_to_n.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "7" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="φ EDX", shape=house, fillcolor="#163030"];
  "10" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="φ EDX", shape=house, fillcolor="#163030"];
  "5" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="φ EAX", shape=house, fillcolor="#163030"];
  "10" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="φ EDI", shape=house, fillcolor="#163030"];
  "5" -> "24" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="φ ESI", shape=house, fillcolor="#163030"];
  "5" -> "28" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "32" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "35" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
